--- a/app/geofenceTriggerOptions/geofenceTriggerOptions.component.html
+++ b/app/geofenceTriggerOptions/geofenceTriggerOptions.component.html
@@ -1,7 +1,7 @@
 <div>
     <p style="float: left">Radius * ?</p>
     <input style="float: left; width: 100px; margin-left: 20px" class="form-control" type="number" [(ngModel)]="radius" min="0">
-    <select style="width: 100px; margin-left: 204px" class="form-control" [(ngModel)]="radiusUnit" (change)="updateRadius($event)">
+    <select style="width: 100px; margin-left: 204px" class="form-control" [(ngModel)]="radiusUnit" (change)="updateRadius($event.currentTarget.value)">
         <option value="f" >feet</option>
         <option value="m" >meters</option>
     </select>
@@ -46,7 +46,7 @@
             <td>
                 <input type="checkbox" [(ngModel)]="loiterTimeSelected" style="float: left"> <p style="float:left;"> Time at Location ?</p>
                 <input type="text" class="tighterInput form-control" [(ngModel)]="loiterTime" [disabled]="!loiterTimeSelected" style="float: left; width:50px">
-                <select style="width: 100px;" class="smallSelect form-control" [(ngModel)]="loiterTimeUnit" [disabled]="!loiterTimeSelected" (change)="updateLoiterTime($event)">
+                <select style="width: 100px;" class="smallSelect form-control" [(ngModel)]="loiterTimeUnit" [disabled]="!loiterTimeSelected" (change)="updateLoiterTime($event.currentTarget.value)">
                     <option value="m">minutes</option>
                     <option value="h">hours</option>
                 </select>
@@ -54,7 +54,7 @@
             <td>
                 <input style="float: left" type="checkbox" [(ngModel)]="minSpeedSelected"> <p style="float:left;">Min Speed ?</p>
                 <input type="text" class="tighterInput form-control" [(ngModel)]="minSpeed" [disabled]="!minSpeedSelected" style="float: left; width:50px">
-                <select style="width: 100px;" class="smallSelect form-control" [(ngModel)]="minSpeedUnit" [disabled]="!minSpeedSelected" (change)="updateMinSpeed($event)">
+                <select style="width: 100px;" class="smallSelect form-control" [(ngModel)]="minSpeedUnit" [disabled]="!minSpeedSelected" (change)="updateMinSpeed($event.currentTarget.value)">
                     <option value="m">mph</option>
                     <option value="k">kmh</option>
                 </select>
@@ -65,7 +65,7 @@
             <td>
                 <input type="checkbox" [(ngModel)]="triggerExpirationSelected" style="float: left"> <p style="float:left;"> Trigger Expiration?</p>
                 <input type="text" [(ngModel)]="triggerExpiration" class="tighterInput form-control" [disabled]="!triggerExpirationSelected" style="float: left; width:50px">
-                <select style="width: 100px;" class="smallSelect form-control" [(ngModel)]="triggerExpirationUnit" [disabled]="!triggerExpirationSelected" (change)="updateExpirationTime($event)">
+                <select style="width: 100px;" class="smallSelect form-control" [(ngModel)]="triggerExpirationUnit" [disabled]="!triggerExpirationSelected" (change)="updateExpirationTime($event.currentTarget.value)">
                     <option value="m">minutes</option>
                     <option value="h">hours</option>
                 </select>
@@ -73,7 +73,7 @@
             <td>
                 <input style="float: left" type="checkbox" [(ngModel)]="maxSpeedSelected"> <p style="float:left;">Max Speed ?</p>
                 <input type="text" class="tighterInput form-control" [(ngModel)]="maxSpeed" [disabled]="!maxSpeedSelected" style="float: left; width:50px">
-                <select style="width: 100px;" class="smallSelect form-control" [(ngModel)]="maxSpeedUnit" [disabled]="!maxSpeedSelected" (change)="updateMaxSpeed($event)">
+                <select style="width: 100px;" class="smallSelect form-control" [(ngModel)]="maxSpeedUnit" [disabled]="!maxSpeedSelected" (change)="updateMaxSpeed($event.currentTarget.value)">
                     <option value="m">mph</option>
                     <option value="k">kmh</option>
                 </select>
