--- a/app/locationsIdentification/locationsIdentification.component.css
+++ b/app/locationsIdentification/locationsIdentification.component.css
@@ -2,14 +2,10 @@
     margin-left:auto;
     margin-right:auto;
 }
-
 .refinementTable{
     margin-left: 30px;
     width: 400px;
-    position: relative;
-    top:0;
 }
-
 .categoryTable{
     height: 300px;
     overflow-y: scroll;
@@ -46,4 +42,10 @@ h6{
 }
 textarea {
     resize: none;
+}
+.smallHorizontalSpacing{
+    margin-left: 15px;
+}
+.smallVerticalSpacing{
+    margin-top: 20px;
 }
