--- a/app/locationsIdentification/locationsIdentification.component.html
+++ b/app/locationsIdentification/locationsIdentification.component.html
@@ -48,9 +48,9 @@
             </table>
 
         </td>
-        <td>
+        <td class="allignTop">
             <!-- Table used to display the refinement criteria -->
-            <table style="position: relative;top: 0" class="refinementTable allLabels allTexts">
+            <table class="refinementTable allLabels allTexts">
                 <tr>
                     <td class="allLabels allTexts">Refine by Country <span class="required">*</span></td>
                 </tr>
