--- a/app/geofencingModel/geofencingModel.component.html
+++ b/app/geofencingModel/geofencingModel.component.html
@@ -1,4 +1,4 @@
-<table >
+<table class="allTexts">
     <div *ngFor="#trafficTypeOption of trafficTypesOptions" class="spacing">
         <tr >
             <td class="firstTd">
