--- a/app/locationsIdentification/locationsIdentification.component.html
+++ b/app/locationsIdentification/locationsIdentification.component.html
@@ -3,7 +3,7 @@
         <td colspan="2">
            <div class="inlineBlock">Data Sources</div>
             <div class="inlineBlock" *ngFor="#provider of providers">
-                <input [ngModel]="selectedProviders.indexOf(provider)!=-1" [checked]="selectedProviders.indexOf(provider)!=-1" (change)="onProviderSelect(provider)" class="inlineBlock smallHorizontalspacing" type="checkbox" checked disabled>
+                <input [ngModel]="selectedProviders.indexOf(provider)!=-1" [checked]="selectedProviders.indexOf(provider)!=-1" (change)="onProviderSelect(provider)" class="inlineBlock smallHorizontalspacing" type="checkbox" disabled>
                 <h6 class="inlineBlock">{{provider.name}}</h6>
             </div>
         </td>
@@ -66,7 +66,7 @@
                 </tr>
                 <tr>
                     <td class="criteriaLabel">
-                        <select id="refineByCategoryDropdown" class="form-control smallText allTexts" (change)="selectedCategoryInDropdownChanged($event)">
+                        <select id="refineByCategoryDropdown" class="form-control smallText allTexts" (change)="selectedCategoryInDropdownChanged($event)" [(ngModel)]="pickedCategoryId">
                             <option *ngFor="#category of selectedCategories" [value]="category.id">{{category.name}}</option>
                         </select>
                     </td>
