--- a/app/quotaManagement/quotaManagement.component.css
+++ b/app/quotaManagement/quotaManagement.component.css
@@ -20,6 +20,7 @@
     color: #7F7F7F;
 }
 .sectionLabel{
+    vertical-align: top;
     width: 15%;
     font-size: 21.33px;
 }
@@ -40,4 +41,20 @@
 }
 .categoryRow{
     height: 50px;
+}
+.form-control:focus {
+    border-color: #F5811A;
+    box-shadow: inset 0 1px 1px rgba(245, 129, 26, 0.07), 0 0 8px rgba(245, 129, 26, 0.6);
+}
+.form-control{
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+}
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
 }
